--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -30,3 +34,7 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
